Fixed nowrap and remove unnecessary nbsp function

--- a/src/components/compontents.css
+++ b/src/components/compontents.css
@@ -2,6 +2,7 @@
 td {
     width: 4%;
     text-align: left;
+    white-space: nowrap;
 }
 
 td.right {
